Add testing for config initialisation