@@ -10,11 +10,11 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit.version>5.6.2</junit.version>
+		<junit.version>5.7.0</junit.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<protocollib.version>4.5.0</protocollib.version>
 		<caffeine.version>2.8.5</caffeine.version>
-		<dazzleconf.version>0.3.0</dazzleconf.version>
+		<dazzleconf.version>0.3.2</dazzleconf.version>
 	</properties>
 	
 	<licenses>
@@ -76,6 +76,10 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<trimStackTrace>false</trimStackTrace>
+					<argLine>-Xverify:none -XX:TieredStopAtLevel=1 -XX:-TieredCompilation</argLine>
+					<systemPropertyVariables>
+						<java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
+					</systemPropertyVariables>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -155,7 +159,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<artifactId>slf4j-jdk14</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
